--- a/index.html
+++ b/index.html
@@ -27,9 +27,15 @@
         display: inline-block;
         color: blueviolet;
     }
+    section {
+        max-width: 600px;
+    }
 </style>
 <body>
-    <p>hi i am <span>roms</span> this is my page</p>
-    <canvas id="canvas"></canvas>
+    <section>
+    <p>hi I am <span>roms</span> this is my page. I like scripting in JS/TS + making webapps + doing interfaces.</p>
+    </section>
+    <canvas width="600" height="400" id="canvas"></canvas>
+    <dialog id="context"> hi</dialog>
 </body>
 </html>
