webkit select none && color-scheme in root

--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
 <link rel="stylesheet" href="./main.css"/>
 <style>
     :root {
+        color-scheme: light dark;
         --font: light-dark(#2f2f2f, whitesmoke);
         --font-weight: normal;
         --font-weight-wide: bold;
         --background-1: light-dark(whitesmoke, #2f2f2f);
-        --blur-base: light-dark(rgba(17, 17, 26, 0.05), snow);
-        --blur: light-dark(rgba(17, 17, 26, 0.1), whitesmoke);
+        --blur-base: light-dark(rgba(17, 17, 26, 0.05), rgba(17, 17, 26, 0.15));
+        --blur: light-dark(rgba(17, 17, 26, 0.1), rgba(17, 17, 26, 0.4));
         --shadow-1: var(--blur-base) 0px 1px 0px, var(--blur) 0px 0px 8px;
 
         --offset-lg: 4rem;
