--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         flex-wrap: wrap;
     }
     #world {
-        width: 400px;
+        width: 100%;
         height: 400px;
         overflow: hidden;
     }
@@ -115,7 +115,7 @@
         </div>
     </template>
     <section id="slot"></section>
-    <section id="world"></section>
+    <div id="world"></div>
 </body>
 <script src="./main.ts" async module></script>
 </html>
