--- a/index.html
+++ b/index.html
@@ -91,8 +91,9 @@
         flex-wrap: wrap;
     }
     #world {
-        width: 100%;
-        height: 400px;
+        margin-top: var(--offset);
+        width: 300px;
+        height: 300px;
         overflow: hidden;
     }
 </style>
